# notecard

./: .gitignore  Makefile  README.md  mypy.ini  pyproject.toml
notecard/: __init__.py  conductor.py  converters.py  game.py  mic_monitor.py
notecard/configs/concertina/30button/jeffries_cg/: config.json
